--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       <a href="https://github.com/temilona/testt" class="btn">View on GitHub</a>
       <a href="https://github.com/temilona/testt/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/temilona/testt/tarball/master" class="btn">Download .tar.gz</a>
+      
+      <p id="demo"></p>
+
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script>
+
     </section>
 
     <section class="main-content">
