--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <p id="demo"></p>
 
 <script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
 </script>
 
     </section>
