--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
       <a href="https://github.com/temilona/testt" class="btn">View on GitHub</a>
       <a href="https://github.com/temilona/testt/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/temilona/testt/tarball/master" class="btn">Download .tar.gz</a>
-      
+      <p id="demo"></p>
   
 
 <script>
 
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
-<p id="demo"></p>
+<button type="button"onclick="document.getElementById('demo').innerHTML = Date()"> Click me to display Date and Time.</button>
+
 </script>
 
     </section>
