--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <a href="https://github.com/temilona/testt" class="btn">View on GitHub</a>
       <a href="https://github.com/temilona/testt/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/temilona/testt/tarball/master" class="btn">Download .tar.gz</a>
-      <p id="demo"></p>
+    
   
 
-<script>
+<script type="text/javascript">
 
 var GlobalObject=new Array();
 var Falling = {
